load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load('@bazel_tools//tools/build_defs/repo:git.bzl', 'git_repository')

#local_repository(
#    name = "OptFrame",
#    path = "../../"
#)

# importing solver, but not strictly necessary (TODO: review this decision)
git_repository(
    name='solver_kp01_generic',
    remote='https://github.com/CombZoo/solver_kp01_generic.git',
    branch='master'
)

git_repository(
    name='OptFrame',
    remote='https://github.com/optframe/optframe.git',
    branch='master'
)
